@@ -4,7 +4,7 @@ supportexecincludedir = $(includedir)/gnome/$(GNOME_INTERFACE_VERSION)
 
 INCLUDES = -D_GNU_SOURCE
 
-noinst_LTLIBRARIES = libgnomesupport.la
+lib_LTLIBRARIES = libgnomesupport-1.3.la
 
 # it is in _DATA since we don't want `gnomesupport.h' to be part of
 # the distributed `.tar.gz' file
@@ -21,9 +21,9 @@ supportexecinclude_DATA = gnomesupport.h
 #popt_sources = findme.c poptconfig.c poptparse.c popt.c popthelp.c
 popt_sources=
 
-libgnomesupport_la_SOURCES = gnomesupport.h $(popt_sources) gnome-argp.c
-libgnomesupport_la_LIBADD  = @LTLIBOBJS@
-libgnomesupport_la_LDFLAGS = -version-info 0:0:0
+libgnomesupport_1_3_la_SOURCES = gnomesupport.h $(popt_sources) gnome-argp.c
+libgnomesupport_1_3_la_LIBADD  = @LTLIBOBJS@
+libgnomesupport_1_3_la_LDFLAGS = -version-info 0:0:0
 
 BUILT_SOURCES = gnomesupport.h
 
@@ -42,4 +42,7 @@ EXTRA_DIST = gnomesupport.awk README-gnome \
 	memmove.c mkstemp.c popt-gnome.h popt.c poptconfig.c \
 	popthelp.c poptint.h poptparse.c scandir.c strcasecmp.c \
 	strerror.c strndup.c strnlen.c strtod.c strtok_r.c strtol.c \
-	strtoul.c vasprintf.c vsnprintf.c
+	strtoul.c vasprintf.c vsnprintf.c gnome-support-2.0.pc.in
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = gnome-support-2.0.pc
