@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: gnome-support
+Description: GNOME support library
+Version: @VERSION@
+Requires: gnome-common-2.0
+Libs: -lgnomesupport-1.3
+Cflags: 
