@@ -1,3 +1,10 @@
+2000-11-21  Martin Baulig  <baulig@suse.de>
+
+	* Makefile.am: Install libgnomesupport.la, but call it
+	libgnomesupport-1.3.la.
+
+	* gnome-support-2.0.pc.in: Added pkg-config file.
+
 1999-05-27  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnomesupport.awk: Put c++ guards after #includes.
